@@ -1488,7 +1488,9 @@ literal|1
 return|;
 block|}
 comment|// otherwise on alphabetic order
-return|return
+name|int
+name|keyCompare
+init|=
 name|CHARSEQUENCE_COMPARATOR
 operator|.
 name|compare
@@ -1501,6 +1503,43 @@ name|o2
 operator|.
 name|key
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|keyCompare
+operator|!=
+literal|0
+condition|)
+block|{
+return|return
+name|keyCompare
+return|;
+block|}
+comment|// if same weight and title, use the payload if there is one
+if|if
+condition|(
+name|o1
+operator|.
+name|payload
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+name|o1
+operator|.
+name|payload
+operator|.
+name|compareTo
+argument_list|(
+name|o2
+operator|.
+name|payload
+argument_list|)
+return|;
+block|}
+return|return
+literal|0
 return|;
 block|}
 block|}
