@@ -76,6 +76,34 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|MockAnalyzer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|MockTokenizer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|standard
 operator|.
 name|StandardAnalyzer
@@ -171,6 +199,20 @@ operator|.
 name|util
 operator|.
 name|LuceneTestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|TestUtil
 import|;
 end_import
 
@@ -1130,6 +1172,314 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testBlendedInfixSuggesterDedupsOnWeightTitleAndPayload
+specifier|public
+name|void
+name|testBlendedInfixSuggesterDedupsOnWeightTitleAndPayload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|//exactly same inputs
+name|Input
+index|[]
+name|inputDocuments
+init|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,     }
+decl_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// inputs differ on payload
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid2"
+argument_list|)
+argument_list|)
+block|,     }
+expr_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+comment|//exactly same input without payloads
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|)
+block|,     }
+expr_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+comment|//Same input with first has payloads, second does not
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|)
+block|,     }
+expr_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+comment|/**same input, first not having a payload, the second having payload      * we would expect 2 entries out but we are getting only 1 because      * the InputArrayIterator#hasPayloads() returns false because the first      * item has no payload, therefore, when ingested, none of the 2 input has payload and become 1      */
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid2"
+argument_list|)
+argument_list|)
+block|,     }
+expr_stmt|;
+name|List
+argument_list|<
+name|Lookup
+operator|.
+name|LookupResult
+argument_list|>
+name|results
+init|=
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|results
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|payload
+argument_list|)
+expr_stmt|;
+comment|//exactly same inputs but different weight
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|1
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,     }
+expr_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+comment|//exactly same inputs but different text
+name|inputDocuments
+operator|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your earings"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,
+operator|new
+name|Input
+argument_list|(
+literal|"lend me your ear"
+argument_list|,
+literal|7
+argument_list|,
+operator|new
+name|BytesRef
+argument_list|(
+literal|"uid1"
+argument_list|)
+argument_list|)
+block|,     }
+expr_stmt|;
+name|duplicateCheck
+argument_list|(
+name|inputDocuments
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|rying
 specifier|public
 name|void
@@ -1389,6 +1739,139 @@ block|}
 return|return
 operator|-
 literal|1
+return|;
+block|}
+DECL|method|duplicateCheck
+specifier|private
+name|List
+argument_list|<
+name|Lookup
+operator|.
+name|LookupResult
+argument_list|>
+name|duplicateCheck
+parameter_list|(
+name|Input
+index|[]
+name|inputs
+parameter_list|,
+name|int
+name|expectedSuggestionCount
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Analyzer
+name|a
+init|=
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|MockTokenizer
+operator|.
+name|WHITESPACE
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|BlendedInfixSuggester
+name|suggester
+init|=
+operator|new
+name|BlendedInfixSuggester
+argument_list|(
+name|newDirectory
+argument_list|()
+argument_list|,
+name|a
+argument_list|,
+name|a
+argument_list|,
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_MIN_PREFIX_CHARS
+argument_list|,
+name|BlendedInfixSuggester
+operator|.
+name|BlenderType
+operator|.
+name|POSITION_RECIPROCAL
+argument_list|,
+literal|10
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|InputArrayIterator
+name|inputArrayIterator
+init|=
+operator|new
+name|InputArrayIterator
+argument_list|(
+name|inputs
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+name|inputArrayIterator
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Lookup
+operator|.
+name|LookupResult
+argument_list|>
+name|results
+init|=
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+name|TestUtil
+operator|.
+name|stringToCharSequence
+argument_list|(
+literal|"ear"
+argument_list|,
+name|random
+argument_list|()
+argument_list|)
+argument_list|,
+literal|10
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|expectedSuggestionCount
+argument_list|,
+name|results
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|suggester
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|a
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+return|return
+name|results
 return|;
 block|}
 block|}
